# dpnegf

./: .gitignore  Dockerfile  README.md  pyproject.toml  test.py  ut.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  help-wanted.yml  tests.yml
.github/workflows/: add_pages_doc.yml  devcontainer.yml  image.yml  unit_test.yml
docs/: CITATIONS.md  CONTRIBUTING.md  DevelopingTeam.md  conf.py  easy_install.md  index.rst  requirements.txt
docs/hands_on/: index.rst  tutorial1_c_chain.ipynb  tutorial2_2d_mat.ipynb
dpnegf/: __init__.py  __main__.py
dpnegf/data/: AtomicDataDict.py  __init__.py  batch_np.py  data_np.py  transforms.py
dpnegf/entrypoints/: main.py  run.py
dpnegf/main/: NEGF.py
dpnegf/negf/: density.py  device_property.py  lead_property.py  negf_hamiltonian_init.py  negf_utils.py  newton_raphson_speed_up.py  poisson.py  poisson_init.py  recursive_green_cal.py  scf_method.py  split_btd.py  surface_green.py  transport.py
dpnegf/runner/: NEGF.py
dpnegf/tests/: test_auto_memory.py  test_get_fermi.py  test_negf_device_property.py  test_negf_kmesh_sampling.py  test_negf_negf_hamiltonian_init.py  test_negf_run.py  test_newton_raphson_speed_up.py  test_poisson_init.py  test_scf_method.py
dpnegf/utils/: __init__.py  argcheck.py  constants.py  elec_struc_cal.py  gen_input_docs.py  loggers.py  mkl_operator.py  parrallel.py  tools.py
dptb_negf/data/: AtomicData.py  AtomicDataDict.py  __init__.py  transforms.py
dptb_negf/main/: NEGF.py
dptb_negf/negf/: bloch_tran.ipynb  density.py  device_property.py  lead_property.py  negf_hamiltonian_init.py  poisson.py  poisson_init.py  transport.py
dptb_negf/utils/: constants.py
examples/CNT/: cnt7_0.xyz  input.json  nnsk_dftb.json  run.ipynb
examples/MoS2/: MoS2_orth.vasp  POSCAR  negf.json  orth_ckpt_r_max_5.3_sk.json  stru_negf.xyz
examples/atomic_chain/: run.ipynb
examples/atomic_chain_api/: run.ipynb
examples/atomic_chain_cli/: run.ipynb
examples/graphene/: band.json  negf.json  stru_negf.xyz  struct.xyz
examples/hBN/: band.json  negf.json  siesta.TBT.AVTRANS_Left-Right  stru_negf.xyz
(+39 files in other folders)
