[tool.poetry]
name = "dpnegf"
version = "0.1.0"
license = "LGPL-3.0"
description = "A nonequilibrium Green’s function (NEGF) module based on dptb."
authors = ["J. Zou <jijiezou@stu.pku.edu.cn>","Q. Gu <guqq@pku.edu.cn>", "Z. Zhanghao <zhouyinzhanghao@gmail.com>"]
readme = "README.md"
repository = "https://github.com/DeePTB-Lab/dpnegf"

[tool.poetry.dependencies]
dptb = ">=2.1.0"
python = ">=3.9, <=3.12.9"
pytest = ">=7.2.0"
pytest-order = "1.2.0"
numpy = "*"
scipy = ">=1.11.*,<=1.12.*"
spglib = "*"
matplotlib = "*"
torch = ">=2.0.0,<=2.5.1"
ase = "*"
pyyaml = "*"
future = "*"
dargs = "0.4.4"
xitorch = "0.3.0"
e3nn = ">=0.5.1"
torch-runstats = "0.2.0"
torch_scatter = "2.1.2"
torch_geometric = ">=2.4.0"
opt-einsum = "3.3.0"
h5py = ">=3.7.0,<=3.11.0,!=3.10.0"
lmdb = "1.4.1"
pyfiglet = "1.0.2"
tensorboard = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pytest-order = "1.2.0"
numpy = "*"
scipy = ">=1.11.*,<=1.12.*"
spglib = "*"
matplotlib = "*"
torch = ">=2.0.0,<=2.5.1"
ase = "*"
pyyaml = "*"
future = "*"
dargs = "0.4.4"
xitorch = "0.3.0"
e3nn = ">=0.5.1"
torch-runstats = "0.2.0"
torch_scatter = "2.1.2"
torch_geometric = ">=2.4.0"
opt-einsum = "3.3.0"
h5py = ">=3.7.0,<=3.11.0,!=3.10.0"
lmdb = "1.4.1"
pyfiglet = "1.0.2"
tensorboard = "*"


[tool.poetry.group.pybinding]
optional = true

[tool.poetry.group.pybinding.dependencies]
pybinding = "*"

[tool.poetry.scripts]
dpnegf = "dpnegf.__main__:main"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
strict = false
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""
